--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "start": "next start"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.6.0",
     "@types/node": "22.5.0",
     "@types/react": "18.3.4",
     "autoprefixer": "^10.4.20",
