--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,10 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "pages",
+    "app"
   ],
   "exclude": [
     "node_modules"
