--- a/package.json
+++ b/package.json
@@ -18,10 +18,7 @@
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
-    "tailwind-merge": "^2.5.2"
-  },
-  "devDependencies": {
-    "@netlify/plugin-nextjs": "^5.6.0",
+    "tailwind-merge": "^2.5.2",
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
@@ -29,5 +26,8 @@
     "postcss": "^8.4.45",
     "tailwindcss": "^3.4.10",
     "typescript": "latest"
+  },
+  "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.6.0"
   }
 }
